[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/49.png" type="Texture" id=1]
[ext_resource path="res://Script/variavel.gd" type="Script" id=2]

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="49" type="Sprite" parent="."]
position = Vector2( 641.25, 359.875 )
scale = Vector2( 0.266742, 0.268376 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Button" type="Button" parent="."]
show_behind_parent = true
margin_left = 408.0
margin_top = 236.0
margin_right = 920.0
margin_bottom = 330.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
show_behind_parent = true
margin_left = 401.0
margin_top = 362.0
margin_right = 923.0
margin_bottom = 460.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
show_behind_parent = true
margin_left = 406.0
margin_top = 480.0
margin_right = 924.0
margin_bottom = 575.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Button4" type="Button" parent="."]
show_behind_parent = true
margin_left = 583.0
margin_top = 617.0
margin_right = 750.0
margin_bottom = 691.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="." method="_on_Button4_pressed"]
